[package]
name = "relative"
version = "0.1.3"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","encoding","rust-patterns","network-programming"]
keywords = ["serde","static","reference","pointer","distributed"]
description = """
A type to wrap `&'static` references such that they can be safely sent between other processes running the same binary.
"""
repository = "https://github.com/alecmocatta/relative"
homepage = "https://github.com/alecmocatta/relative"
documentation = "https://docs.rs/relative/0.1.3"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/relative", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0"
uuid = { version = "0.7", features = ["serde"] }
build_id = { version = "0.1" }
metatype = { version = "0.1.1" }

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
