[package]
name = "relative"
version = "0.1.5"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","encoding","rust-patterns","network-programming"]
keywords = ["serde","static","reference","pointer","distributed"]
description = """
A type to wrap `&'static` references such that they can be safely sent between other processes running the same binary.
"""
repository = "https://github.com/alecmocatta/relative"
homepage = "https://github.com/alecmocatta/relative"
documentation = "https://docs.rs/relative/0.1.5"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/relative", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
build_id = "0.2"
serde = "1.0"
uuid = { version = "0.8", features = ["serde"] }

[dev-dependencies]
bincode = "1.0"
metatype = "0.1.1"
serde_derive = "1.0"
serde_json = "1.0"

[features]
nightly = []
